--- a/app/javascript/flavours/aether/styles/components/announcements.scss
+++ b/app/javascript/flavours/aether/styles/components/announcements.scss
@@ -117,6 +117,11 @@
   margin-top: 15px;
   margin-inline-start: -2px;
   width: calc(100% - (90px - 33px));
+  column-gap: 2px;
+
+  &__item:hover {
+    transform: scale(2);
+  }
 
   &__item,
   .emoji-picker-dropdown {
@@ -132,12 +137,14 @@
     align-items: center;
     transition: all 100ms ease-in;
     transition-property: background-color, color;
+    height: 2rem;
+    box-sizing: border-box;
 
     &__emoji {
       display: block;
-      margin: 3px 0;
-      width: 16px;
-      height: 16px;
+      margin: 2px 0;
+      width: 1.6rem;
+      height: 1.6rem;
 
       img {
         display: block;
@@ -154,7 +161,7 @@
     .animated-number {
       display: block;
       min-width: 9px;
-      font-size: 13px;
+      font-size: 0.9rem;
       font-weight: 500;
       text-align: center;
       margin-inline-start: 6px;
@@ -194,19 +201,26 @@
     }
   }
 
-  .emoji-button {
+  .emoji-picker-dropdown {
     color: var(--ui-font-dimmest-color);
     margin: 0;
-    font-size: 16px;
-    width: auto;
+    font-size: 1.5rem;
+    width: 2rem;
+    height: 2rem;
     flex-shrink: 0;
     padding: 0 6px;
-    height: 22px;
     display: flex;
     align-items: center;
-    opacity: 0.85;
     transition: all 100ms ease-in;
     transition-property: background-color, color;
+
+    .emoji-button {
+      height: 100%;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
     .animated-number {
       color: var(--ui-font-dimmest-color);
@@ -235,7 +249,7 @@
       padding: 0;
 
       .clicky {
-        padding: 0 6px;
+        padding: 0;
       }
     }
   }
