--- a/app/javascript/flavours/aether/styles/components/misc.scss
+++ b/app/javascript/flavours/aether/styles/components/misc.scss
@@ -195,8 +195,10 @@
     color: var(--ui-highlight-color);
     border: 1px solid var(--ui-highlight-color);
     display: block;
-    margin: 0 auto;
+    margin: 14px auto 0;
     width: max-content;
+    font-size: 1rem;
+    font-weight: bold;
 
     &:active,
     &:focus,
@@ -1241,14 +1243,13 @@ body > [data-popper-placement] {
 
 button.icon-button i.fa-retweet {
   mask-position: 0 0;
-  height: 18px;
+  height: 1em;
   transition:
     mask-position 0.9s steps(10),
     background 0.2s;
   transition-duration: 0s;
   vertical-align: middle;
-  width: 22px;
-  transform: scale(1.3, 1.3);
+  width: 1.5em;
 
   &::before {
     display: none !important;
@@ -1257,7 +1258,7 @@ button.icon-button i.fa-retweet {
 
 button.icon-button.active i.fa-retweet {
   transition-duration: 0.9s;
-  mask-position: 0 100%;
+  mask-position: 0 90%;
 }
 
 @media screen and (prefers-reduced-motion) {
