--- a/app/javascript/flavours/aether/styles/accounts.scss
+++ b/app/javascript/flavours/aether/styles/accounts.scss
@@ -242,6 +242,9 @@
     border-radius: var(--ui-border-radius);
     margin-top: 8px;
   }
+  @media screen and (min-width: $widescreen-breakpoint) {
+    margin-top: 15px;
+  }
 
   overflow: hidden;
   background: var(--ui-body-color);
