--- a/app/javascript/flavours/aether/styles/components/right_column.scss
+++ b/app/javascript/flavours/aether/styles/components/right_column.scss
@@ -1,4 +1,28 @@
+@media screen and (min-width: $widescreen-breakpoint) {
+  .fixed_wrapper {
+    top: 60px;
+    position: fixed;
+    width: inherit;
+
+    > div:last-child {
+      padding-bottom: 20px;
+    }
+  }
+}
+
 .right_column {
+  @media screen and (min-width: $widescreen-breakpoint) {
+    width: var(--ui-right-column-width);
+
+    .list-panel {
+      margin-bottom: 15px;
+    }
+
+    .scrollable {
+      width: auto;
+    }
+  }
+
   .dismissable-banner {
     display: none;
   }
