--- a/app/javascript/flavours/aether/styles/modal.scss
+++ b/app/javascript/flavours/aether/styles/modal.scss
@@ -76,6 +76,7 @@
     position: absolute;
     left: 8px;
     bottom: 8px;
+    font-size: 1.2rem;
   }
 
   .spoiler-input.spoiler-input--visible {
