--- a/app/javascript/flavours/aether/styles/about.scss
+++ b/app/javascript/flavours/aether/styles/about.scss
@@ -249,10 +249,6 @@ $fluid-breakpoint: $maximum-width + 20px;
     padding: 0;
     text-align: center;
     font-size: 0.8rem;
-
-    @media screen and (min-width: $no-gap-breakpoint) {
-      display: none;
-    }
   }
 
   .account {
@@ -363,4 +359,8 @@ $fluid-breakpoint: $maximum-width + 20px;
 .rules_footer {
   text-align: center;
   margin-top: 1em;
+}
+
+.rules__wrapper {
+margin-top:30px;
 }
