--- a/app/javascript/flavours/aether/styles/about.scss
+++ b/app/javascript/flavours/aether/styles/about.scss
@@ -364,3 +364,7 @@ $fluid-breakpoint: $maximum-width + 20px;
 .rules__wrapper {
 margin-top:30px;
 }
+
+.layout-multiple-columns .about {
+padding:0;
+}
