--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %meta{ charset: 'utf-8' }/
     %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1' }/
+    %meta{ name: 'RATING', content: 'RTA-5042-1996-1400-1577-RTA'}/
 
     - if cdn_host?
       %link{ rel: 'dns-prefetch', href: cdn_host }/
