--- a/app/javascript/flavours/aether/styles/components/status.scss
+++ b/app/javascript/flavours/aether/styles/components/status.scss
@@ -73,6 +73,7 @@
     &:hover {
       transform: scale(2.5);
       filter: drop-shadow(0 0 3px var(--ui-shadow-color));
+      cursor:none;
     }
   }
 
